compliance and re-wording

--- a/atlantis-details.html
+++ b/atlantis-details.html
@@ -237,7 +237,7 @@
 					<div class="col-lg-6">
 						<div class="solutions-content">
 							<h3>Atlantis Club Membership</h3>
-							<p>The Atlantis Club is a subscription service that provides the market an entry point to the Yeetum Investment Group network, analyst, tools, and intelligence. Our mission with the Atlantis Club is to enable higher level partnerships and investment services to members. We enable this by providing market signals intelligence powered by FUM. Enabling community to ask experts in different domains for thoughts and feedback on trades & investment ideas or business challenges. Connect trusted partners and advisors to help you build your business in the Cyber & information era with access to multi-disciplinary analyst and engineers.</p>
+							<p>The Atlantis Club is a prestigious club to Yeetum's - analyst, tools, and intelligence. Our mission with the Atlantis Club is to enable higher level information relationships. We enable this by providing FUM analytics. Enabling community to ask experts in different domains for thoughts and feedback on analytical challenges. Community to help you build your business in the Cyber & information era with access to multi-disciplinary analyst and engineers.</p>
 						</div>
 					</div>
 
@@ -249,9 +249,9 @@
 
 					<div class="col-lg-12">
 						<div class="solutions-content three">
-							<h3>Solutions for All Levels of Investors & Traders</h3>
+							<h3>Solutions for Information Advantage</h3>
 							
-							<p>Due to our dynamic and multi-disciplinary nature. We can support individual investors financial and investment planning or strategizing. Additionally, we're adept in global macro investing and enterprise IT to enable family offices to plan their Cyber Estate and strategize a plan to enable families to securely manage and build digital-asset treasuries while mitigating counter-party risk.</p>
+							<p>Due to our dynamic and multi-disciplinary nature. We can support organized or individual entities. Additionally, we're adept in global macro information and enterprise IT to enable family offices to plan their Cyber Estate and strategize a plan to enable families to securely manage and build digital security while mitigating counter-party risk.</p>
 						</div>
 					</div>
 
