--- a/atlantisClub.html
+++ b/atlantisClub.html
@@ -286,13 +286,11 @@
 	
 								<ul>
 									<li>Atlantis Club Membership</li>
-									<li>Daily Quant Reports & Research</li>
+									<li>Daily Quant Information</li>
 									<li>ATLAS Cloud Platform (TBA)</li>
-									<li>Signals Intelligence on 700+ stocks and 18+ crypto</li>
-									<li>YIG White-Glove Advisory </li>
+									<li>Signals Intelligence on 700+ technical instruments</li>
+									<li>White-Glove Yeeters</li>
 									<li>Exclusive Atlantis Club Chats</li>
-									<li>Exclusive Access Funds, Ventures, & Partnerships</li>
-									<li>Access to angel investing in Yeetum</li>
 								</ul>
 	
 								<a href="https://buy.stripe.com/8wM5mC2Ki1r84486op" class="default-btn">
@@ -321,13 +319,11 @@
 	
 								<ul>
 									<li>Atlantis Club Membership</li>
-									<li>Daily Quant Reports & Research</li>
+									<li>Daily Quant Information</li>
 									<li>ATLAS Cloud Platform (TBA)</li>
-									<li>Signals Intelligence on 700+ stocks and 18+ crypto</li>
-									<li>YIG White-Glove Advisory </li>
+									<li>Signals Intelligence on 700+ technical instruments</li>
+									<li>White-Glove Yeeters</li>
 									<li>Exclusive Atlantis Club Chats</li>
-									<li>Exclusive Access Funds, Ventures, & Partnerships</li>
-									<li>Access to angel investing in Yeetum</li>
 								</ul>
 	
 								<a href="https://buy.stripe.com/8wM5mCfx40n4eIMeUY" class="default-btn">
