--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 							<div class="overly-two">
 								<div class="title">
 									<i class="flaticon-application"></i>
-									<h3>Cyber Investing Tools</h3>
+									<h3>Cyber Market Information Tools</h3>
 								</div>
 								<p>Market data mining across currencies, futures, equities, and crypto-currencies. All with a cloud-native competitive edge.</p>
 							</div>
@@ -267,7 +267,7 @@
 									<i class="flaticon-cybercrime"></i>
 									<h3>Atlantis Club</h3>
 								</div>
-								<p>Cyber Age: Financial Planning, Investment Strategies, Portfolio Development, Quant Research, Private Funds, Estate Planning.</p>
+								<p>Cyber Age: Community, Information value assesing the meta economy.</p>
 							</div>
 						</div>
 					</div>
@@ -295,7 +295,7 @@
 			<div class="container">
 				<div class="section-title">
 					<span>Our Approach</span>
-					<h2>To Enhance Your Cyber Estate</h2>
+					<h2>Augment Your Cyber Strengths</h2>
 				</div>
 
 				<div class="row align-items-center">
@@ -307,7 +307,7 @@
 
 					<div class="col-lg-6">
 						<div class="approach-content">
-							<h3>Without slowing down for a moment, Atlantis Club provides you expertise on the growing web3 economy and how to navigate.</h3>
+							<h3>Without slowing down for a moment, Atlantis Club provides you information on the growing web3 economy and how to navigate.</h3>
 
 							<div class="row">
 								<div class="col-lg-6 col-sm-6">
@@ -333,8 +333,8 @@
 
 								<div class="col-lg-6 col-sm-6">
 									<div class="single-approach">
-										<h3>Asset Management</h3>
-										<p>Asset allocations, portfolio strategies, signals reports for DIY investors and traders. Hands-off private funds </p>
+										<h3>Information Pipeline</h3>
+										<p>Tailored information to Cyber economics.</p>
 									</div>
 								</div>
 							</div>
@@ -350,7 +350,7 @@
 			<div class="container">
 				<div class="section-title white-title">
 					<span>Our Challenges</span>
-					<h2>You Can Build Your Family Cyber Estate With Us</h2>
+					<h2>You Can Build Your Cyber Domain With Us</h2>
 				</div>
 
 				<div class="row">
@@ -358,7 +358,7 @@
 						<div class="single-challenges overly-one">
 							<div class="overly-two">
 								<i class="flaticon-threat"></i>
-								<h3>Target Portfolios</h3>
+								<h3>Targeted Information</h3>
 								<p>Hone in on specific portfolios that enable your individual and family investment goals.</p>
 								<span class="flaticon-threat"></span>
 							</div>
@@ -370,7 +370,7 @@
 							<div class="overly-two">
 								<i class="flaticon-cyber"></i>
 								<h3>Cyber Risk Assessment</h3>
-								<p>Assess your asset-allocations preparedness for increasingly digitized global markets.</p>
+								<p>Assess your preparedness in a increasingly cyber environment.</p>
 								<span class="flaticon-cyber"></span>
 							</div>
 						</div>
@@ -391,8 +391,8 @@
 						<div class="single-challenges overly-one">
 							<div class="overly-two">
 								<i class="flaticon-password"></i>
-								<h3>Digital-Asset Security</h3>
-								<p>Enabling you to securely adopt digital-assets and protect against counter-party risk.</p>
+								<h3>Digital Security</h3>
+								<p>Enabling you to securely be educated on counter-party risk.</p>
 								<span class="flaticon-password"></span>
 							</div>
 						</div>
@@ -413,7 +413,7 @@
 						<div class="solution-content">
 							<div class="solution-title">
 								<span>Highly Affordable Strategic Services</span>
-								<h2>Our experts are providing and planning 24/7 on the latest market intelligence via our community networks, proprietary tools, and OSINT.</h2>
+								<h2>Our experts are providing and planning 24/7 on the latest cyber intelligence via our community networks, proprietary tools, and OSINT.</h2>
 							</div>
 
 							<div class="row">
@@ -574,8 +574,8 @@
 									<div class="single-challenges overly-one">
 										<div class="overly-two">
 											<i class="flaticon-security-1"></i>
-											<h3>Portfolio System</h3>
-											<p>Automated quant trading and portfolio management.</p>
+											<h3>Community</h3>
+											<p>Deep-value information driven community network.</p>
 											<span class="flaticon-security-1"></span>
 										</div>
 									</div>
