--- a/about.html
+++ b/about.html
@@ -344,8 +344,8 @@
 						<div class="single-challenges overly-one">
 							<div class="overly-two">
 								<i class="flaticon-threat"></i>
-								<h3>Target Portfolios</h3>
-								<p>Hone in on specific portfolios that enable your individual and family investment goals.</p>
+								<h3>Targeted Information</h3>
+								<p>Hone in on specific information that enables your individual and firm goals.</p>
 								<span class="flaticon-threat"></span>
 							</div>
 						</div>
@@ -356,7 +356,7 @@
 							<div class="overly-two">
 								<i class="flaticon-cyber"></i>
 								<h3>Cyber Risk Assessment</h3>
-								<p>Assess your asset-allocations preparedness for increasingly digitized global markets.</p>
+								<p>Assess your information pipelines preparedness for increasingly digitized global markets.</p>
 								<span class="flaticon-cyber"></span>
 							</div>
 						</div>
@@ -377,8 +377,8 @@
 						<div class="single-challenges overly-one">
 							<div class="overly-two">
 								<i class="flaticon-password"></i>
-								<h3>Digital-Asset Security</h3>
-								<p>Enabling you to securely adopt digital-assets and protect against counter-party risk.</p>
+								<h3>Digital Security</h3>
+								<p>Enabling you to securely adopt digital security and open-source disciplines.</p>
 								<span class="flaticon-password"></span>
 							</div>
 						</div>
