--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 									<i class="flaticon-cybercrime"></i>
 									<h3>Atlantis Club</h3>
 								</div>
-								<p>Cyber Age: Community, Information value assesing the meta economy.</p>
+								<p>Cyber Age: Community, Information value assesing the meta economy, sharing strategies on web3 business.</p>
 							</div>
 						</div>
 					</div>
