Adjust stripe links

--- a/atlantisClub.html
+++ b/atlantisClub.html
@@ -293,7 +293,7 @@
 									<li>Exclusive Atlantis Club Chats</li>
 								</ul>
 	
-								<a href="https://buy.stripe.com/8wM5mC2Ki1r84486op" class="default-btn">
+								<a href="https://buy.stripe.com/bIY6qG0pPbSi1C8144" class="default-btn">
 									<span>Subscribe</span>
 								</a>
 	
@@ -326,7 +326,7 @@
 									<li>Exclusive Atlantis Club Chats</li>
 								</ul>
 	
-								<a href="https://buy.stripe.com/8wM5mCfx40n4eIMeUY" class="default-btn">
+								<a href="https://buy.stripe.com/28o6qGc8xg8ya8E4gh" class="default-btn">
 									<span>Subscribe</span>
 								</a>
 	
