Atlantis Club rebrand to Eden Club

--- a/eden-details.html
+++ b/eden-details.html
@@ -30,7 +30,7 @@
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" href="assets/img/favicon.png">
 		<!-- Title -->
-		<title>Yeetum - Atlantis Club Details</title>
+		<title>Yeetum - Eden Club Details</title>
     </head>
 
     <body>
@@ -147,17 +147,17 @@
 
 									<li class="nav-item">
 										<a href="#" class="nav-link">
-											Atlantis Club
+											Eden Club
 											<i class="bx bx-chevron-down"></i>
 										</a>
 
 										<ul class="dropdown-menu">
 											<li class="nav-item">
-												<a href="atlantisClub.html" class="nav-link">Membership</a>
+												<a href="EdenClub.html" class="nav-link">Membership</a>
 											</li>
 
 											<li class="nav-item">
-												<a href="atlantis-details.html" class="nav-link">Service Details</a>
+												<a href="Eden-details.html" class="nav-link">Service Details</a>
 											</li>
 
 											<li class="nav-item">
@@ -215,7 +215,7 @@
 		<div class="page-title-area page-title-style-two">
 			<div class="container">
 				<div class="page-title-content">
-					<h2>Atlantis Club Details</h2>
+					<h2>Eden Club Details</h2>
 					<ul>
 						<li>
 							<a href="index.html">
@@ -223,7 +223,7 @@
 								Home 
 							</a>
 						</li>
-						<li class="active">Atlantis Club Details</li>
+						<li class="active">Eden Club Details</li>
 					</ul>
 				</div>
 			</div>
@@ -236,8 +236,8 @@
 				<div class="row align-items-center">
 					<div class="col-lg-6">
 						<div class="solutions-content">
-							<h3>Atlantis Club Membership</h3>
-							<p>The Atlantis Club is a prestigious club to Yeetum's - analyst, tools, and intelligence. Our mission with the Atlantis Club is to enable higher level information relationships. We enable this by providing FUM analytics. Enabling community to ask experts in different domains for thoughts and feedback on analytical challenges. Community to help you build your business in the Cyber & information era with access to multi-disciplinary analyst and engineers.</p>
+							<h3>Eden Club Membership</h3>
+							<p>The Eden Club is a prestigious club to Yeetum's - analyst, tools, and intelligence. Our mission with the Eden Club is to enable higher level information relationships. We enable this by providing FUM analytics. Enabling community to ask experts in different domains for thoughts and feedback on analytical challenges. Community to help you build your business in the Cyber & information era with access to multi-disciplinary analyst and engineers.</p>
 						</div>
 					</div>
 
@@ -256,8 +256,8 @@
 					</div>
 
 					<div class="challenge-btn">
-						<a href="atlantisClub.html" class="default-btn overly-one">
-							<span>Join the Atlantis Club</span>
+						<a href="EdenClub.html" class="default-btn overly-one">
+							<span>Join the Eden Club</span>
 						</a>
 					</div>
 					</div>
@@ -326,7 +326,7 @@
 
 							<ul class="import-link">
 								<li>
-									<a href="atlantisClub.html">Atlantis Club</a>
+									<a href="EdenClub.html">Eden Club</a>
 								</li>
 								<li>
 									<a href="about.html">About</a>
