--- a/index.html
+++ b/index.html
@@ -146,17 +146,17 @@
 
 									<li class="nav-item">
 										<a href="#" class="nav-link">
-											Atlantis Club
+											Eden Club
 											<i class="bx bx-chevron-down"></i>
 										</a>
 
 										<ul class="dropdown-menu">
 											<li class="nav-item">
-												<a href="atlantisClub.html" class="nav-link">Membership</a>
+												<a href="EdenClub.html" class="nav-link">Membership</a>
 											</li>
 
 											<li class="nav-item">
-												<a href="atlantis-details.html" class="nav-link">Service Details</a>
+												<a href="Eden-details.html" class="nav-link">Service Details</a>
 											</li>
 
 											<li class="nav-item">
@@ -223,8 +223,8 @@
 									<p class="wow fadeInLeft" data-wow-delay="1s">Data driven nerds. Cloud-native operations. <br>Community-driven & open-source intelligence network.</p>
 		
 									<div class="banner-btn wow fadeInUp" data-wow-delay="1s">
-										<a href="atlantisClub.html" class="default-btn">
-											<span>Join the Atlantis Club</span>
+										<a href="EdenClub.html" class="default-btn">
+											<span>Join the Eden Club</span>
 										</a>
 									</div>
 								</div>
@@ -265,7 +265,7 @@
 							<div class="overly-two">
 								<div class="title">
 									<i class="flaticon-cybercrime"></i>
-									<h3>Atlantis Club</h3>
+									<h3>Eden Club</h3>
 								</div>
 								<p>Cyber Age: Community, Information value assesing the meta economy, sharing strategies on web3 business.</p>
 							</div>
@@ -307,7 +307,7 @@
 
 					<div class="col-lg-6">
 						<div class="approach-content">
-							<h3>Without slowing down for a moment, Atlantis Club provides you information on the growing web3 economy and how to navigate.</h3>
+							<h3>Without slowing down for a moment, Eden Club provides you information on the growing web3 economy and how to navigate.</h3>
 
 							<div class="row">
 								<div class="col-lg-6 col-sm-6">
@@ -421,7 +421,7 @@
 									<div class="single-solution overly-one">
 										<div class="overly-two">
 											<h3>
-												<a href="atlantisClub.html">
+												<a href="EdenClub.html">
 													Ideate
 												</a>
 											</h3>
@@ -435,7 +435,7 @@
 									<div class="single-solution overly-one">
 										<div class="overly-two">
 											<h3>
-												<a href="atlantisClub.html">
+												<a href="EdenClub.html">
 													Validate
 												</a>
 											</h3>
@@ -449,7 +449,7 @@
 									<div class="single-solution overly-one">
 										<div class="overly-two">
 											<h3>
-												<a href="atlantisClub.html">
+												<a href="EdenClub.html">
 													Implement & Repeat
 												</a>
 											</h3>
@@ -679,7 +679,7 @@
 
 							<ul class="import-link">
 								<li>
-									<a href="atlantisClub.html">Atlantis Club</a>
+									<a href="EdenClub.html">Eden Club</a>
 								</li>
 								<li>
 									<a href="about.html">About</a>
