--- a/edenClub.html
+++ b/edenClub.html
@@ -30,7 +30,7 @@
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" href="assets/img/favicon.png">
 		<!-- Title -->
-		<title>Yeetum - Atlantis Club</title>
+		<title>Yeetum - Eden Club</title>
     </head>
 
     <body>
@@ -147,17 +147,17 @@
 
 									<li class="nav-item">
 										<a href="#" class="nav-link">
-											Atlantis Club
+											Eden Club
 											<i class="bx bx-chevron-down"></i>
 										</a>
 
 										<ul class="dropdown-menu">
 											<li class="nav-item">
-												<a href="atlantisClub.html" class="nav-link">Membership</a>
+												<a href="EdenClub.html" class="nav-link">Membership</a>
 											</li>
 
 											<li class="nav-item">
-												<a href="atlantis-details.html" class="nav-link">Service Details</a>
+												<a href="Eden-details.html" class="nav-link">Service Details</a>
 											</li>
 
 											<li class="nav-item">
@@ -285,12 +285,12 @@
 								</div>
 	
 								<ul>
-									<li>Atlantis Club Membership</li>
+									<li>Eden Club Membership</li>
 									<li>Daily Quant Information</li>
 									<li>ATLAS Cloud Platform (TBA)</li>
 									<li>Signals Intelligence on 700+ technical instruments</li>
 									<li>White-Glove Yeeters</li>
-									<li>Exclusive Atlantis Club Chats</li>
+									<li>Exclusive Eden Club Chats</li>
 								</ul>
 	
 								<a href="https://buy.stripe.com/bIY6qG0pPbSi1C8144" class="default-btn">
@@ -318,12 +318,12 @@
 								</div>
 	
 								<ul>
-									<li>Atlantis Club Membership</li>
+									<li>Eden Club Membership</li>
 									<li>Daily Quant Information</li>
 									<li>ATLAS Cloud Platform (TBA)</li>
 									<li>Signals Intelligence on 700+ technical instruments</li>
 									<li>White-Glove Yeeters</li>
-									<li>Exclusive Atlantis Club Chats</li>
+									<li>Exclusive Eden Club Chats</li>
 								</ul>
 	
 								<a href="https://buy.stripe.com/28o6qGc8xg8ya8E4gh" class="default-btn">
@@ -455,7 +455,7 @@
 
 							<ul class="import-link">
 								<li>
-									<a href="atlantisClub.html">Atlantis Club</a>
+									<a href="EdenClub.html">Eden Club</a>
 								</li>
 								<li>
 									<a href="about.html">About</a>
