--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -147,17 +147,17 @@
 
 									<li class="nav-item">
 										<a href="#" class="nav-link">
-											Atlantis Club
+											Eden Club
 											<i class="bx bx-chevron-down"></i>
 										</a>
 
 										<ul class="dropdown-menu">
 											<li class="nav-item">
-												<a href="atlantisClub.html" class="nav-link">Membership</a>
+												<a href="EdenClub.html" class="nav-link">Membership</a>
 											</li>
 
 											<li class="nav-item">
-												<a href="atlantis-details.html" class="nav-link">Service Details</a>
+												<a href="Eden-details.html" class="nav-link">Service Details</a>
 											</li>
 
 											<li class="nav-item">
@@ -422,7 +422,7 @@
 
 							<ul class="import-link">
 								<li>
-									<a href="atlantisClub.html">Atlantis Club</a>
+									<a href="EdenClub.html">Eden Club</a>
 								</li>
 								<li>
 									<a href="about.html">About</a>
