--- a/about.html
+++ b/about.html
@@ -268,12 +268,12 @@
 									</div>
 
 									<div class="tabs_item">
-										<p>We help investors and traders of all skill levels navigate markets confidently in the information age by strategizing their Cyber Estate.<br>We achieve this by intelligence sharing, fostering community, powerful data tools & mining, and multi-disciplinary expertise in Cyber and Investments.</h3>
+										<p>We help information seekers of all skill levels navigate markets confidently in the information age by strategizing their Cyber Estate.<br>We achieve this by intelligence sharing, fostering community, powerful data tools & mining, and multi-disciplinary expertise in Cyber.</h3>
 
 										<ul>
 											<li>
 												<i class="bx bx-check-circle"></i>
-												Trusted Partner & Advisor
+												Trusted Partners & Advisors
 											</li>
 											<li>
 												<i class="bx bx-check-circle"></i>
