--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 							<div class="col-lg-9">
 								<div class="banner-content">
 									<span class="top-title wow fadeInDown" data-wow-delay="1s">Cyber Agency</span>
-									<h1 class="wow fadeInDown" data-wow-delay="1s">Deep Value<span>Intelligence</span></h1>
+									<h1 class="wow fadeInDown" data-wow-delay="1s">Deep Value<span><br>Intelligence</span></h1>
 									<p class="wow fadeInLeft" data-wow-delay="1s">Data driven nerds. Cloud-native operations. <br>Community-driven & open-source intelligence network.</p>
 		
 									<div class="banner-btn wow fadeInUp" data-wow-delay="1s">
