added hardware wallet + tweaked benefits

--- a/edenClub.html
+++ b/edenClub.html
@@ -286,11 +286,11 @@
 	
 								<ul>
 									<li>Eden Club Membership</li>
-									<li>Daily Quant Information</li>
+									<li>Crypto Hardware Wallet</li>
+									<li>Daily Signals Intelligence via FUM on 700+ stocks & 18+ crypto</li>
+									<li>Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
+									<li>Exclusive Eden Club Channels, Busines, Events, & Networking</li>
 									<li>ATLAS Cloud Platform (TBA)</li>
-									<li>Signals Intelligence on 700+ technical instruments</li>
-									<li>White-Glove Yeeters</li>
-									<li>Exclusive Eden Club Chats</li>
 								</ul>
 	
 								<a href="https://buy.stripe.com/bIY6qG0pPbSi1C8144" class="default-btn">
@@ -319,11 +319,11 @@
 	
 								<ul>
 									<li>Eden Club Membership</li>
-									<li>Daily Quant Information</li>
+									<li>Crypto Hardware Wallet</li>
+									<li>Daily Signals Intelligence via FUM on 700+ stocks & 18+ crypto</li>
+									<li>Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
+									<li>Exclusive Eden Club Channels, Busines, Events, & Networking</li>
 									<li>ATLAS Cloud Platform (TBA)</li>
-									<li>Signals Intelligence on 700+ technical instruments</li>
-									<li>White-Glove Yeeters</li>
-									<li>Exclusive Eden Club Chats</li>
 								</ul>
 	
 								<a href="https://buy.stripe.com/28o6qGc8xg8ya8E4gh" class="default-btn">
