launch monthly eden subscription at $40

--- a/edenClub.html
+++ b/edenClub.html
@@ -243,25 +243,23 @@
 						<div class="single-pricing overly-one">
 							<div class="overly-two">
 								<div class="pricing-title">
-									<h3>Community</h3>
-									<h2>Free</h2>
-									<span>Synergy</span>
+									<h3>Monthly</h3>
+									<h2><Sub>$</Sub>40</h2>
+									<span>Per 1 month</span>
 									<h4>Includes</h4>
 								</div>
 	
 								<ul>
-									<li>Information Network</li>
-									<li>Investor Channels</li>
-									<li>Entrepreneurship Channels</li>
-									<li>Cyber Channels</li>
-									<li>Engineering Channels</li>
-									<li>Community Support</li>
-									<li>Gaming</li>
-									<li>Multi-Disciplinary Analysts & Engineers</li>
+									<li>Eden Club Membership</li>
+									<li>Crypto Hardware Wallet (~3 months of payment required for this tier)</li>
+									<li>Daily Signals Intelligence via FUM on 700+ stocks & 18+ crypto</li>
+									<li>Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
+									<li>Exclusive Eden Club Channels, Busines, Events, & Networking</li>
+									<li>ATLAS Cloud Platform (TBA)</li>
 								</ul>
 	
-								<a href="http://synergy.yeetum.com" class="default-btn">
-									<span>Join Synergy</span>
+								<a href="https://buy.stripe.com/7sIdT84G5e0q1C83ch" class="default-btn">
+									<span>Subscribe</span>
 								</a>
 	
 								<div class="pricing-shape">
@@ -311,7 +309,7 @@
 						<div class="single-pricing overly-one">
 							<div class="overly-two">
 								<div class="pricing-title">
-									<h3>Yearly Discount</h3>
+									<h3>Yearly Discount (3 months)</h3>
 									<h2><Sub>$</Sub>240</h2>
 									<span>Per year</span>
 									<h4>Includes</h4>
