--- a/edenClub.html
+++ b/edenClub.html
@@ -250,7 +250,7 @@
 									<li>Crypto Hardware Wallet (~3 months of payment required for this tier)</li>
 									<li>Daily Signals Intelligence via FUM on 700+ stocks & 18+ crypto</li>
 									<li>Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
-									<li>Exclusive Eden Club Channels, Busines, Events, & Networking</li>
+									<li>Exclusive Eden Club Channels, Business, Events, & Networking</li>
 									<li>ATLAS Cloud Platform (TBA)</li>
 								</ul>
 	
@@ -283,7 +283,7 @@
 									<li>Crypto Hardware Wallet</li>
 									<li>Daily Signals Intelligence via FUM on 700+ stocks & 18+ crypto</li>
 									<li>Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
-									<li>Exclusive Eden Club Channels, Busines, Events, & Networking</li>
+									<li>Exclusive Eden Club Channels, Business, Events, & Networking</li>
 									<li>ATLAS Cloud Platform (TBA)</li>
 								</ul>
 	
@@ -316,7 +316,7 @@
 									<li>Crypto Hardware Wallet</li>
 									<li>Daily Signals Intelligence via FUM on 700+ stocks & 18+ crypto</li>
 									<li>Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
-									<li>Exclusive Eden Club Channels, Busines, Events, & Networking</li>
+									<li>Exclusive Eden Club Channels, Business, Events, & Networking</li>
 									<li>ATLAS Cloud Platform (TBA)</li>
 								</ul>
 	
