adjust copy on eden club description

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 									<i class="flaticon-cybercrime"></i>
 									<h3>Eden Club</h3>
 								</div>
-								<p>Cyber Age: Community, Information value assesing the meta economy, sharing strategies on web3 business.</p>
+								<p>Information Advisory subscription enabling members with Web3 strategies, hardware wallets & crypto security, daily signals intelligence on stocks & crypto, central banking, geo-politics, market analysis, and private networks & events.</p>
 							</div>
 						</div>
 					</div>
@@ -276,7 +276,7 @@
 									<i class="flaticon-cyber-security"></i>
 									<h3>Synergy Community</h3>
 								</div>
-								<p><span>Click here</span> to join an always free and open-source community - Synergy. You're not alone in our pursuits.</p>
+								<p><span>Click here</span> to join an always free and open-source community - Synergy. We're dedicated to fostering community intelligence, enablement, and success. Don't feel stranded in your pursuits.</p>
 								</a>
 							</div>
 						</div>
