refined eden value prop

--- a/edenClub.html
+++ b/edenClub.html
@@ -252,6 +252,7 @@
 									<li>Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
 									<li>Exclusive Eden Club Channels, Business, Events, & Networking</li>
 									<li>ATLAS Cloud Platform (TBA)</li>
+									<li>On-Demand Education & Enablement sessions</li>
 								</ul>
 	
 								<a href="https://buy.stripe.com/7sIdT84G5e0q1C83ch" class="default-btn">
@@ -285,6 +286,7 @@
 									<li>Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
 									<li>Exclusive Eden Club Channels, Business, Events, & Networking</li>
 									<li>ATLAS Cloud Platform (TBA)</li>
+									<li>On-Demand Education & Enablement sessions</li>
 								</ul>
 	
 								<a href="https://buy.stripe.com/bIY6qG0pPbSi1C8144" class="default-btn">
@@ -318,6 +320,7 @@
 									<li>Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
 									<li>Exclusive Eden Club Channels, Business, Events, & Networking</li>
 									<li>ATLAS Cloud Platform (TBA)</li>
+									<li>On-Demand Education & Enablement sessions</li>
 								</ul>
 	
 								<a href="https://buy.stripe.com/28o6qGc8xg8ya8E4gh" class="default-btn">
