resolved old IG links

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="https://www.instagram.com/yeetumdotcom/" target="_blank">
+									<a href="https://www.instagram.com/yeetum.eth/" target="_blank">
 										<i class="bx bxl-instagram"></i>
 									</a>
 								</li>
@@ -403,7 +403,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="https://www.instagram.com/yeetumdotcom/">
+							<a href="https://www.instagram.com/yeetum.eth/">
 								<i class="bx bxl-instagram"></i>
 							</a>
 						</li>
