--- a/eden-details.html
+++ b/eden-details.html
@@ -74,7 +74,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="https://www.instagram.com/yeetumdotcom/" target="_blank">
+									<a href="https://www.instagram.com/yeetum.eth/" target="_blank">
 										<i class="bx bxl-instagram"></i>
 									</a>
 								</li>
@@ -238,11 +238,12 @@
 							<p>The Eden Club is a prestigious club to Yeetum's analyst, tools, and intelligence. Our mission with the Eden Club is to enable higher level information relationships. We enable this by providing FUM analytics. Enabling community to ask experts in different domains for thoughts and feedback on analytical challenges. Community to help you build your business in the Cyber & information era with access to multi-disciplinary analyst and engineers.</p>
 							<h4>Benefits:</h4>
 							<ul>
-								<li>- Crypto Hardware Wallet</li>
-								<li>- Daily Signals Intelligence via FUM on 700+ stocks & 18+ crypto</li>
-								<li>- Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
-								<li>- Exclusive Eden Club Channels, Business, Events, & Networking</li>
-								<li>- ATLAS Cloud Platform (SaaS platform in development)</li>
+							
+								<li>-Crypto Hardware Wallet</li>
+								<li>-Daily Signals Intelligence via FUM on 700+ stocks & 18+ crypto</li>
+								<li>-Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
+								<li>-Exclusive Eden Club Channels, Business, Events, & Networking</li>
+								<li>-On-Demand Education & Enablement sessions</li>
 							</ul>
 						</div>
 					</div>
@@ -291,7 +292,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="https://www.instagram.com/yeetumdotcom/">
+									<a href="https://www.instagram.com/yeetum.eth/">
 										<i class="bx bxl-instagram"></i>
 									</a>
 								</li>
