--- a/edenClub.html
+++ b/edenClub.html
@@ -74,7 +74,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="https://www.instagram.com/yeetumdotcom/" target="_blank">
+									<a href="https://www.instagram.com/yeetum.eth/" target="_blank">
 										<i class="bx bxl-instagram"></i>
 									</a>
 								</li>
@@ -251,7 +251,6 @@
 									<li>Daily Signals Intelligence via FUM on 700+ stocks & 18+ crypto</li>
 									<li>Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
 									<li>Exclusive Eden Club Channels, Business, Events, & Networking</li>
-									<li>ATLAS Cloud Platform (TBA)</li>
 									<li>On-Demand Education & Enablement sessions</li>
 								</ul>
 	
@@ -285,7 +284,6 @@
 									<li>Daily Signals Intelligence via FUM on 700+ stocks & 18+ crypto</li>
 									<li>Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
 									<li>Exclusive Eden Club Channels, Business, Events, & Networking</li>
-									<li>ATLAS Cloud Platform (TBA)</li>
 									<li>On-Demand Education & Enablement sessions</li>
 								</ul>
 	
@@ -319,7 +317,6 @@
 									<li>Daily Signals Intelligence via FUM on 700+ stocks & 18+ crypto</li>
 									<li>Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
 									<li>Exclusive Eden Club Channels, Business, Events, & Networking</li>
-									<li>ATLAS Cloud Platform (TBA)</li>
 									<li>On-Demand Education & Enablement sessions</li>
 								</ul>
 	
@@ -411,7 +408,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="https://www.instagram.com/yeetumdotcom/">
+									<a href="https://www.instagram.com/yeetum.eth/">
 										<i class="bx bxl-instagram"></i>
 									</a>
 								</li>
