--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="https://www.instagram.com/yeetumdotcom/" target="_blank">
+									<a href="https://www.instagram.com/yeetum.eth/" target="_blank">
 										<i class="bx bxl-instagram"></i>
 									</a>
 								</li>
@@ -634,7 +634,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="https://www.instagram.com/yeetumdotcom/">
+									<a href="https://www.instagram.com/yeetum.eth/">
 										<i class="bx bxl-instagram"></i>
 									</a>
 								</li>
