--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -74,7 +74,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="https://www.instagram.com/yeetumdotcom/" target="_blank">
+									<a href="https://www.instagram.com/yeetum.eth/" target="_blank">
 										<i class="bx bxl-instagram"></i>
 									</a>
 								</li>
@@ -377,7 +377,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="https://www.instagram.com/yeetumdotcom/">
+									<a href="https://www.instagram.com/yeetum.eth/">
 										<i class="bx bxl-instagram"></i>
 									</a>
 								</li>
