add Synergy iFrame

--- a/index.html
+++ b/index.html
@@ -474,43 +474,8 @@
 				<div class="section-title white-title">
 					<span>Get In Touch</span>
 					<h2>Contact Us Today To Speak With A Yeetum Associate About Your Specific Needs</h2>
+					<iframe src="https://discord.com/widget?id=707964248109744190&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 				</div>
-
-				<form class="get-in-touch-form">
-					<div class="row">
-						<div class="col-lg-6 col-sm-6">
-							<div class="form-group">
-								<label>Name</label>
-								<input type="text" class="form-control" id="First-Name">
-							</div>
-						</div>
-
-						<div class="col-lg-6 col-sm-6">
-							<div class="form-group">
-								<label>Email</label>
-								<input type="email" class="form-control" id="Email">
-							</div>
-						</div>
-
-						<div class="col-lg-6 col-sm-6">
-							<div class="form-group">
-								<label>Phone</label>
-								<input type="text" class="form-control" id="Number">
-							</div>
-						</div>
-
-						<div class="col-lg-6 col-sm-6">
-							<div class="form-group">
-								<label>Company</label>
-								<input type="text" class="form-control" id="Company">
-							</div>
-						</div>
-					</div>
-
-					<button type="submit" class="default-btn">
-						<span>Consultation</span>
-					</button>
-				</form>
 			</div>
 		</section>
 		<!-- Eed Get In Touch Area -->
