add sys status and docs link

--- a/index.html
+++ b/index.html
@@ -160,6 +160,16 @@
 											</li>
 										</ul>
 									</li>
+									<li class="nav-item">
+										<a href="https://docs.yeetum.com" class="nav-link active">
+											Docs
+										</a>
+									</li>
+									<li class="nav-item">
+										<a href="https://status.yeetum.com" class="nav-link active">
+											System Status
+										</a>
+									</li>
 
 									<li class="nav-item">
 										<a href="https://synergy.yeetum.com" class="nav-link">Contact</a>
