--- a/edenClub.html
+++ b/edenClub.html
@@ -163,6 +163,17 @@
 									</li>
 
 									<li class="nav-item">
+										<a href="https://docs.yeetum.com" class="nav-link active">
+											Docs
+										</a>
+									</li>
+									<li class="nav-item">
+										<a href="https://status.yeetum.com" class="nav-link active">
+											System Status
+										</a>
+									</li>
+
+									<li class="nav-item">
 										<a href="https://synergy.yeetum.com" class="nav-link">Contact</a>
 									</li>
 								</ul>
