--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -165,6 +165,16 @@
 									<li class="nav-item">
 										<a href="https://synergy.yeetum.com" class="nav-link">Contact</a>
 									</li>
+									<li class="nav-item">
+										<a href="https://docs.yeetum.com" class="nav-link active">
+											Docs
+										</a>
+									</li>
+									<li class="nav-item">
+										<a href="https://status.yeetum.com" class="nav-link active">
+											System Status
+										</a>
+									</li>
 								</ul>
 								
 								<div class="others-option">
