remove FUM offering and marketing

--- a/eden-details.html
+++ b/eden-details.html
@@ -244,12 +244,11 @@
 							<h3>Eden Club Membership</h3>
 							<p>Eden Club is a subscription service to the Yeetum Intelligence Group. Our mission is provide, collect, procure, assess, and distribute strategic intelligence on Cyber & Money.</p>
 							<br>
-							<p>The Eden Club is a prestigious club to Yeetum's analyst, tools, and intelligence. Our mission with the Eden Club is to enable higher level information relationships. We enable this by providing FUM analytics. Enabling community to ask experts in different domains for thoughts and feedback on analytical challenges. Community to help you build your business in the Cyber & information era with access to multi-disciplinary analyst and engineers.</p>
+							<p>The Eden Club is a prestigious club to Yeetum's analyst, tools, and intelligence. Our mission with the Eden Club is to enable higher level information relationships. We enable this by insightful analysis and perspectives from our analyst network. Enabling community to ask experts in different domains for thoughts and feedback on analytical challenges. Community to help you build your business in the Cyber & information era with access to multi-disciplinary analyst and engineers.</p>
 							<h4>Benefits:</h4>
 							<ul>
 							
 								<li>-Crypto Hardware Wallet</li>
-								<li>-Daily Signals Intelligence via FUM on 700+ stocks & 18+ crypto</li>
 								<li>-Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
 								<li>-Exclusive Eden Club Channels, Business, Events, & Networking</li>
 								<li>-On-Demand Education & Enablement sessions</li>
