--- a/edenClub.html
+++ b/edenClub.html
@@ -259,7 +259,6 @@
 								<ul>
 									<li>Eden Club Membership</li>
 									<li>Crypto Hardware Wallet (~3 months of payment required for this tier)</li>
-									<li>Daily Signals Intelligence via FUM on 700+ stocks & 18+ crypto</li>
 									<li>Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
 									<li>Exclusive Eden Club Channels, Business, Events, & Networking</li>
 									<li>On-Demand Education & Enablement sessions</li>
@@ -292,7 +291,6 @@
 								<ul>
 									<li>Eden Club Membership</li>
 									<li>Crypto Hardware Wallet</li>
-									<li>Daily Signals Intelligence via FUM on 700+ stocks & 18+ crypto</li>
 									<li>Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
 									<li>Exclusive Eden Club Channels, Business, Events, & Networking</li>
 									<li>On-Demand Education & Enablement sessions</li>
@@ -325,7 +323,6 @@
 								<ul>
 									<li>Eden Club Membership</li>
 									<li>Crypto Hardware Wallet</li>
-									<li>Daily Signals Intelligence via FUM on 700+ stocks & 18+ crypto</li>
 									<li>Information Advisory on Web3, Macro, Geo-Politics, Market Analysis</li>
 									<li>Exclusive Eden Club Channels, Business, Events, & Networking</li>
 									<li>On-Demand Education & Enablement sessions</li>
@@ -349,7 +346,7 @@
 		</section>
 		<!-- End Pricing Area -->
 
-		<!-- Start Get In Touch Area -->
+		<!-- Start Get In Touch Area 
 		<section class="get-in-touch-area get-in-touch-area-two bg-color ptb-100">
 			<div class="container">
 				<div class="section-title">
@@ -398,6 +395,7 @@
 				<img src="assets/img/get-in-touch-shape.png" alt="Image">
 			</div>
 		</section>
+		-->
 		<!-- Eed Get In Touch Area -->
 
 		<!-- Start Footer Area -->
