--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
 		</section>
 		<!-- Eed Get In Touch Area -->
 
-		<!-- Start Protect Area -->
+		<!-- Start Protect Area 
 		<section class="protect-area protect-area-four pt-100 pb-70">
 			<div class="container">
 				<div class="row">
@@ -557,8 +557,9 @@
 				</div>
 			</div>
 		</section>
+		-->
 		<!-- Eed Protect Area -->
-
+	
 		<!-- Start Subscribe Area -->
 		<section class="subscribe-area pb-100">
 			<div class="container">
